--- a/PorterAndMoon/ClientApp/src/components/pages/Profile/Profile.scss
+++ b/PorterAndMoon/ClientApp/src/components/pages/Profile/Profile.scss
@@ -3,3 +3,13 @@
   font-weight: bolder;
   padding: 20px;
 }
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.date-time {
+  color: #5f5f5f;
+}
