--- a/PorterAndMoon/ClientApp/src/components/Profile/Profile.scss
+++ b/PorterAndMoon/ClientApp/src/components/Profile/Profile.scss
@@ -8,8 +8,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #fff;
 }
 
 .date-time {
-  color: #5f5f5f;
+  color: #c4c4c4;
 }
