--- a/PorterAndMoon/ClientApp/src/components/register/register.scss
+++ b/PorterAndMoon/ClientApp/src/components/register/register.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../../../images/space.jpg);
+  background-image: url(../../images/space.jpg);
   background-size: cover;
 }
 
