--- a/PorterAndMoon/ClientApp/src/components/seller/seller.scss
+++ b/PorterAndMoon/ClientApp/src/components/seller/seller.scss
@@ -32,6 +32,7 @@
 .aggregateUnit {
   margin-left: 1%;
   margin-top: 1%;
+  width: 33%;
 }
 
 .sellerRocketsDiv {
@@ -41,6 +42,7 @@
 .aggregateMenus {
   display: flex;
   justify-content: space-around;
+  text-align: left;
 }
 
 .menuUnit {
