seller selected list displays

--- a/PorterAndMoon/ClientApp/src/components/seller/seller.scss
+++ b/PorterAndMoon/ClientApp/src/components/seller/seller.scss
@@ -58,3 +58,19 @@
 .hovering {
   background-color: darkgoldenrod;
 }
+
+.sellerRocketList {
+  margin-top: 4%;
+  margin-left: 2%;
+}
+
+.sellerListTitle {
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+  border-radius: 3px;
+  width: 25%;
+  margin-left: 2%;
+  margin-top: 2%;
+  text-align: center;
+}
