--- a/PorterAndMoon/ClientApp/src/components/sellerHome/sellerHome.scss
+++ b/PorterAndMoon/ClientApp/src/components/sellerHome/sellerHome.scss
@@ -37,5 +37,9 @@
 
 .sellerBtnDiv {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+.sellerButton {
+  margin: 10px;
 }
