more verbose commenting

--- a/PorterAndMoon/ClientApp/src/components/Cart/Cart.scss
+++ b/PorterAndMoon/ClientApp/src/components/Cart/Cart.scss
@@ -49,6 +49,7 @@
   text-align: center;
 }
 
+// ======== below this line lies styling for stupid SVG image =========
 .remove-from-cart-icon {
   width: 25px;
   height: 25px;
