--- a/PorterAndMoon/ClientApp/src/components/sellerHome/dashboard/dashboard.scss
+++ b/PorterAndMoon/ClientApp/src/components/sellerHome/dashboard/dashboard.scss
@@ -18,9 +18,11 @@
 .currentMonthDataDiv {
   border-bottom: 2px solid white;
   font-size: 0.9em;
+  background-color: cornflowerblue;
 }
 
 .totalDataDiv {
-  margin-top: 5px;
   font-size: 0.9em;
+  background-color: rgba(245, 245, 245, 1);
+  color: black;
 }
