--- a/PorterAndMoon/ClientApp/src/components/seatSelector/seatSelector.scss
+++ b/PorterAndMoon/ClientApp/src/components/seatSelector/seatSelector.scss
@@ -66,3 +66,11 @@
 .seatComplete {
   margin-left: 5px;
 }
+
+.seatsKey {
+  display: flex;
+  flex-flow: column;
+  color: black;
+  margin-left: 20px;
+  margin-top: 50px;
+}
