--- a/PorterAndMoon/ClientApp/src/components/UserPayments/UserPayments.scss
+++ b/PorterAndMoon/ClientApp/src/components/UserPayments/UserPayments.scss
@@ -1,10 +1,16 @@
 Form {
-    background: gray;
     color: black;
     overflow: scroll;
-    width: 70vw;
+    width: 40vw;
     height:70vh;
     margin: 20px;
     padding: 10px;
     border-radius: 10px;
+}
+
+.paymentDetails {
+    background-color: darkslateblue;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
 }
