--- a/PorterAndMoon/ClientApp/src/components/productDetail/productDetail.scss
+++ b/PorterAndMoon/ClientApp/src/components/productDetail/productDetail.scss
@@ -5,7 +5,7 @@
 
 .container {
     background: url(../../images/ED08-0053-07_medium.jpg) no-repeat center fixed;
-    background-size: 100;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
