styled and re-routed add item

--- a/PorterAndMoon/ClientApp/src/components/rocketDetail/rocketDetail.scss
+++ b/PorterAndMoon/ClientApp/src/components/rocketDetail/rocketDetail.scss
@@ -15,3 +15,16 @@
 .plus-icon-foreground {
   fill:#00e311;
 }
+
+.add-modal-success-body{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.add-modal-go-to-cart{
+  margin-left: 15px;
+}
+
+.add-modal-title {
+  text-align: right;
+}
