re-handling console warnings

--- a/PorterAndMoon/ClientApp/src/components/Profile/Profile.scss
+++ b/PorterAndMoon/ClientApp/src/components/Profile/Profile.scss
@@ -14,3 +14,9 @@
 .date-time {
   color: #c4c4c4;
 }
+
+.profile-button-container {
+  margin-top: 13px;
+  display: flex;
+  justify-content: space-around;
+}
