--- a/PorterAndMoon/ClientApp/src/components/productDetail/productDetail.scss
+++ b/PorterAndMoon/ClientApp/src/components/productDetail/productDetail.scss
@@ -3,7 +3,7 @@
     margin-top: 20px;
 }
 
-.container {
+.product-detail-container {
     background: url(../../images/ED08-0053-07_medium.jpg) no-repeat center fixed;
     background-size: cover;
     display: flex;
