--- a/PorterAndMoon/ClientApp/src/components/UserPayments/UserPayments.scss
+++ b/PorterAndMoon/ClientApp/src/components/UserPayments/UserPayments.scss
@@ -1,16 +1,15 @@
 .user-payment-form {
-    color: black;
+    color: white;
     overflow: scroll;
     width: 40vw;
     height:70vh;
     margin: 20px;
     padding: 10px;
     border-radius: 10px;
+    background: rgba(76, 86, 175, 0.3);
 }
 
-.paymentDetails {
-    background-color: darkslateblue;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 5px;
+
+.paymentsCard {
+    color: white;
 }
